[gd_scene load_steps=24 format=2]

[ext_resource path="res://Objects/Sushi_Scenes/Roll.gd" type="Script" id=1]
[ext_resource path="res://Arts/Sushi/seaweed_sheet.png" type="Texture" id=2]
[ext_resource path="res://Objects/Sushi/Sushi_Piece.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Ingredients/Rice.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Ingredients/Top_Seaweed.gd" type="Script" id=5]
[ext_resource path="res://Objects/Ingredients/Bottom_Seaweed.gd" type="Script" id=6]
[ext_resource path="res://Arts/Scene/cutting_board.png" type="Texture" id=7]
[ext_resource path="res://Arts/Lightmask.png" type="Texture" id=8]
[ext_resource path="res://Arts/Sushi/whole_sushi_roll.png" type="Texture" id=9]
[ext_resource path="res://Arts/Sushi/sushi_roll_piece.png" type="Texture" id=10]
[ext_resource path="res://Arts/Sushi/whole_sushi_roll_held.png" type="Texture" id=11]
[ext_resource path="res://Scripts/RandomSFX.gd" type="Script" id=12]
[ext_resource path="res://Sounds/seaweed.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/seaweed_grab.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/seaweed_released.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/drop.wav" type="AudioStream" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 71.6119
height = 450.097

[sub_resource type="Animation" id=2]
resource_name = "auto_roll"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -364 ), Vector2( 0, -455 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.2 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Roll:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.04, 0.16, 0.24, 0.36, 0.5 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 22.0486, -19.2708 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 18.4327, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Roll:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 89.9999, 89.9999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Roll2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.22, 0.24, 0.36, 0.5 ),
"transitions": PoolRealArray( 1, 0.5, 1, 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( -22.6786, 0 ), Vector2( -22.6786, 0 ), Vector2( -80.247, 0 ), Vector2( -80.247, 0 ), Vector2( -42.9669, 0 ), Vector2( -143.455, -7.27596e-12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Roll2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08, 0.22, 0.24 ),
"transitions": PoolRealArray( 1, 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 89.9999, 89.9999 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Roll3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.24, 0.36, 0.5 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 32.5, 13.2292 ), Vector2( 92.5403, 0 ), Vector2( 92.5403, 0 ), Vector2( 42.9199, 0 ), Vector2( 158.346, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Roll3:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.24 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, 89.9999, 89.9999 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.36, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.36, 0.5 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.296498, 0.518513 ), Vector2( 0.296498, 0.518513 ), Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Roll3:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.24, 0.36, 0.5 ),
"transitions": PoolRealArray( 1, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 1 ), Vector2( 1.987, 3.101 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Roll:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.24, 0.36, 0.5 ),
"transitions": PoolRealArray( 1, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 1 ), Vector2( 1.98839, 3.74193 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Roll2:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.24, 0.36, 0.5 ),
"transitions": PoolRealArray( 1, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 1 ), Vector2( 1.99202, 3.84776 ) ]
}

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 2

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 234.521, 272.144 )

[sub_resource type="Animation" id=6]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0.468, 0.173 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rolled_Up:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.787106, 0.669067 ), Vector2( 0.810079, 0.790145 ), Vector2( 0.467765, 0.172666 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rolled_Up:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.28, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Roll" type="Node2D"]
z_index = -3
z_as_relative = false
script = ExtResource( 1 )

[node name="Top_Seaweed" type="Area2D" parent="."]
z_index = 12
collision_mask = 0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Top_Seaweed"]
z_index = 1
texture = ExtResource( 9 )

[node name="Roll2" type="Sprite" parent="Top_Seaweed"]
position = Vector2( -143.455, -7.27596e-12 )
rotation = 1.57079
scale = Vector2( 1.99202, 3.84776 )
texture = ExtResource( 10 )

[node name="Roll" type="Sprite" parent="Top_Seaweed"]
position = Vector2( 18.4327, 0 )
rotation = 1.57079
scale = Vector2( 1.98839, 3.74193 )
texture = ExtResource( 10 )

[node name="Roll3" type="Sprite" parent="Top_Seaweed"]
position = Vector2( 158.346, 0 )
rotation = 1.57079
scale = Vector2( 1.987, 3.101 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Seaweed"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="Top_Seaweed"]
position = Vector2( -3.33705, -266.922 )
scale = Vector2( 3.27613, 3.11228 )
z_index = 14
texture = ExtResource( 8 )
mode = 2
range_item_cull_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Top_Seaweed"]
anims/auto_roll = SubResource( 2 )
anims/spawn = SubResource( 3 )

[node name="Grab" type="AudioStreamPlayer2D" parent="Top_Seaweed"]
stream = ExtResource( 14 )
bus = "SFX"
script = ExtResource( 12 )
base_volume = -5.0

[node name="Released" type="AudioStreamPlayer2D" parent="Top_Seaweed"]
stream = ExtResource( 15 )
bus = "SFX"
script = ExtResource( 12 )

[node name="Fake_Cuttingboard" type="Sprite" parent="."]
light_mask = 2
material = SubResource( 4 )
position = Vector2( 0, -212 )
z_index = 11
texture = ExtResource( 7 )
region_filter_clip = true

[node name="Actual_Roll" type="Node2D" parent="."]
light_mask = 2

[node name="Sushi_Piece1" parent="Actual_Roll" groups=[
"roll_ingredients",
] instance=ExtResource( 3 )]
position = Vector2( -117.262, -193.85 )
z_as_relative = true
is_draggable = false
ingredient = 1

[node name="Sushi_Piece2" parent="Actual_Roll" groups=[
"roll_ingredients",
] instance=ExtResource( 3 )]
position = Vector2( 123.155, -193.85 )
z_as_relative = true
is_draggable = false
ingredient = 1

[node name="Sushi_Piece3" parent="Actual_Roll" groups=[
"roll_ingredients",
] instance=ExtResource( 3 )]
position = Vector2( -119.931, -272.53 )
z_as_relative = true
is_draggable = false

[node name="Sushi_Piece4" parent="Actual_Roll" groups=[
"roll_ingredients",
] instance=ExtResource( 3 )]
position = Vector2( 120.485, -272.53 )
z_as_relative = true
is_draggable = false

[node name="Sushi_Piece5" parent="Actual_Roll" groups=[
"roll_ingredients",
] instance=ExtResource( 3 )]
position = Vector2( -119.931, -348.256 )
z_as_relative = true
is_draggable = false
ingredient = 2

[node name="Sushi_Piece6" parent="Actual_Roll" groups=[
"roll_ingredients",
] instance=ExtResource( 3 )]
position = Vector2( 120.485, -348.256 )
z_as_relative = true
is_draggable = false
ingredient = 3

[node name="Rices" type="Node2D" parent="Actual_Roll"]

[node name="Rice" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -201.037, -392.938 )

[node name="Rice2" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -119.931, -392.938 )

[node name="Rice3" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -38.1861, -392.938 )

[node name="Rice4" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 42.9199, -392.938 )

[node name="Rice5" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 121.821, -392.938 )

[node name="Rice6" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 202.927, -392.938 )

[node name="Rice7" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -199.777, -313.563 )

[node name="Rice8" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -118.671, -313.563 )

[node name="Rice9" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -36.9262, -313.563 )

[node name="Rice10" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 44.1798, -313.563 )

[node name="Rice11" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 123.081, -313.563 )

[node name="Rice12" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 204.187, -313.563 )

[node name="Rice13" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -198.517, -232.928 )

[node name="Rice14" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -117.411, -232.928 )

[node name="Rice15" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -35.6663, -232.928 )

[node name="Rice16" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 45.4397, -232.928 )

[node name="Rice17" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 124.34, -232.928 )

[node name="Rice18" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 205.446, -232.928 )

[node name="Rice19" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -197.257, -153.553 )

[node name="Rice20" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -116.151, -153.553 )

[node name="Rice21" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -34.4064, -153.553 )

[node name="Rice22" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 46.6997, -153.553 )

[node name="Rice23" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 125.6, -153.553 )

[node name="Rice24" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 206.706, -153.553 )

[node name="Rice25" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -195.997, -72.9184 )

[node name="Rice26" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -114.891, -72.9184 )

[node name="Rice27" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( -33.1464, -72.9184 )

[node name="Rice28" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 47.9596, -72.9184 )

[node name="Rice29" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 126.86, -72.9184 )

[node name="Rice30" parent="Actual_Roll/Rices" instance=ExtResource( 4 )]
position = Vector2( 207.966, -72.9184 )

[node name="Bottom_Seaweed" type="Area2D" parent="Actual_Roll"]
position = Vector2( 0, -229.713 )
z_index = 2
collision_layer = 8
collision_mask = 176
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Actual_Roll/Bottom_Seaweed"]
texture = ExtResource( 2 )

[node name="Rolled_Up" type="Sprite" parent="Actual_Roll/Bottom_Seaweed"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -2.86102e-06, 2.17561 )
scale = Vector2( 0.964286, 3.50058 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actual_Roll/Bottom_Seaweed"]
rotation = 1.57079
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Actual_Roll/Bottom_Seaweed"]
anims/drop = SubResource( 6 )
anims/pick_up = SubResource( 7 )

[node name="Grab" type="AudioStreamPlayer2D" parent="Actual_Roll/Bottom_Seaweed"]
stream = ExtResource( 13 )
bus = "SFX"
script = ExtResource( 12 )
base_volume = -5.0

[node name="Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
bus = "SFX"
script = ExtResource( 12 )
[connection signal="mouse_entered" from="Top_Seaweed" to="Top_Seaweed" method="_on_Top_Seaweed_mouse_entered"]
[connection signal="mouse_exited" from="Top_Seaweed" to="Top_Seaweed" method="_on_Top_Seaweed_mouse_exited"]
[connection signal="on_dragging" from="Top_Seaweed" to="Top_Seaweed" method="_on_Top_Seaweed_on_dragging"]
[connection signal="on_released" from="Top_Seaweed" to="Top_Seaweed" method="_on_Top_Seaweed_on_released"]
[connection signal="animation_finished" from="Top_Seaweed/AnimationPlayer" to="Top_Seaweed" method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Actual_Roll/Bottom_Seaweed" to="Actual_Roll/Bottom_Seaweed" method="_on_Bottom_Seaweed_mouse_entered"]
[connection signal="mouse_exited" from="Actual_Roll/Bottom_Seaweed" to="Actual_Roll/Bottom_Seaweed" method="_on_Bottom_Seaweed_mouse_exited"]
[connection signal="animation_finished" from="Actual_Roll/Bottom_Seaweed/AnimationPlayer" to="Actual_Roll/Bottom_Seaweed" method="_on_AnimationPlayer_animation_finished"]
